{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 25,
  "lineage": "32095159-e4e6-0aa1-706c-c06ab5f7edbc",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:370598478840:loadbalancer/app/web-sec-aws-alb/9a1ddf0e42c872c6",
            "arn_suffix": "app/web-sec-aws-alb/9a1ddf0e42c872c6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-sec-aws-alb-815543249.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:370598478840:loadbalancer/app/web-sec-aws-alb/9a1ddf0e42c872c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-sec-aws-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08a4cde32c20a3f82"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0516a9d9a719391db"
              },
              {
                "subnet_id": "subnet-0a81effdaea61fe47"
              }
            ],
            "subnets": [
              "subnet-0516a9d9a719391db",
              "subnet-0a81effdaea61fe47"
            ],
            "tags": {
              "Name": "web-sec-aws-alb",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-alb",
              "Project": "web-sec-aws"
            },
            "vpc_id": "vpc-028896094339f4624",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:370598478840:listener/app/web-sec-aws-alb/9a1ddf0e42c872c6/6fb53f20a7b0384a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:370598478840:targetgroup/web-sec-aws-tg/369693984722a4ed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:370598478840:listener/app/web-sec-aws-alb/9a1ddf0e42c872c6/6fb53f20a7b0384a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:370598478840:loadbalancer/app/web-sec-aws-alb/9a1ddf0e42c872c6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "web-sec-aws-http-listener",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-http-listener",
              "Project": "web-sec-aws"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:370598478840:targetgroup/web-sec-aws-tg/369693984722a4ed",
            "arn_suffix": "targetgroup/web-sec-aws-tg/369693984722a4ed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:370598478840:targetgroup/web-sec-aws-tg/369693984722a4ed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-sec-aws-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-sec-aws-target-group",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-target-group",
              "Project": "web-sec-aws"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-028896094339f4624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:security-group/sg-08a4cde32c20a3f82",
            "description": "Security group para Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a4cde32c20a3f82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web-sec-aws-alb-sg",
            "name_prefix": "",
            "owner_id": "370598478840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sec-aws-alb-sg",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-alb-sg",
              "Project": "web-sec-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-028896094339f4624"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:security-group/sg-0a36db06eab3cf6fe",
            "description": "Security group para instancias EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a36db06eab3cf6fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP desde ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a4cde32c20a3f82"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "web-sec-aws-ec2-sg",
            "name_prefix": "",
            "owner_id": "370598478840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sec-aws-ec2-sg",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-ec2-sg",
              "Project": "web-sec-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-028896094339f4624"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055e24d596b2579dc",
            "arn": "arn:aws:ec2:us-east-1:370598478840:elastic-ip/eipalloc-055e24d596b2579dc",
            "domain": "vpc",
            "id": "eipalloc-055e24d596b2579dc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-226-115-143.compute-1.amazonaws.com",
            "public_ip": "34.226.115.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "web-sec-aws-nat-eip",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-nat-eip",
              "Project": "web-sec-aws"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:internet-gateway/igw-03de63a8b0d9122bb",
            "id": "igw-03de63a8b0d9122bb",
            "owner_id": "370598478840",
            "tags": {
              "Name": "web-sec-aws-igw",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-igw",
              "Project": "web-sec-aws"
            },
            "vpc_id": "vpc-028896094339f4624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055e24d596b2579dc",
            "association_id": "eipassoc-03a84f420d6cdf630",
            "connectivity_type": "public",
            "id": "nat-01ae04839cd3f1bda",
            "network_interface_id": "eni-060b062a5241501bd",
            "private_ip": "10.0.1.157",
            "public_ip": "34.226.115.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a81effdaea61fe47",
            "tags": {
              "Name": "web-sec-aws-nat",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-nat",
              "Project": "web-sec-aws"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:route-table/rtb-070d7038f8a8f2624",
            "id": "rtb-070d7038f8a8f2624",
            "owner_id": "370598478840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ae04839cd3f1bda",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-sec-aws-private-rt",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-private-rt",
              "Project": "web-sec-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-028896094339f4624"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:route-table/rtb-08f1a046df68dae56",
            "id": "rtb-08f1a046df68dae56",
            "owner_id": "370598478840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03de63a8b0d9122bb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-sec-aws-public-rt",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-public-rt",
              "Project": "web-sec-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-028896094339f4624"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cda8f13c62ec3ddf",
            "route_table_id": "rtb-070d7038f8a8f2624",
            "subnet_id": "subnet-038de25d5b847cec2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048ddf0abdb344966",
            "route_table_id": "rtb-070d7038f8a8f2624",
            "subnet_id": "subnet-0f70f6ac974468e4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c57139267c6f4d58",
            "route_table_id": "rtb-08f1a046df68dae56",
            "subnet_id": "subnet-0a81effdaea61fe47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b24bf4dc939aeab",
            "route_table_id": "rtb-08f1a046df68dae56",
            "subnet_id": "subnet-0516a9d9a719391db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:subnet/subnet-038de25d5b847cec2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038de25d5b847cec2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370598478840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-sec-aws-private-1",
              "Project": "web-sec-aws",
              "Type": "private"
            },
            "tags_all": {
              "Name": "web-sec-aws-private-1",
              "Project": "web-sec-aws",
              "Type": "private"
            },
            "vpc_id": "vpc-028896094339f4624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:subnet/subnet-0f70f6ac974468e4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f70f6ac974468e4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370598478840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-sec-aws-private-2",
              "Project": "web-sec-aws",
              "Type": "private"
            },
            "tags_all": {
              "Name": "web-sec-aws-private-2",
              "Project": "web-sec-aws",
              "Type": "private"
            },
            "vpc_id": "vpc-028896094339f4624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:subnet/subnet-0a81effdaea61fe47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a81effdaea61fe47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "370598478840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-sec-aws-public-1",
              "Project": "web-sec-aws",
              "Type": "public"
            },
            "tags_all": {
              "Name": "web-sec-aws-public-1",
              "Project": "web-sec-aws",
              "Type": "public"
            },
            "vpc_id": "vpc-028896094339f4624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:subnet/subnet-0516a9d9a719391db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0516a9d9a719391db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "370598478840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-sec-aws-public-2",
              "Project": "web-sec-aws",
              "Type": "public"
            },
            "tags_all": {
              "Name": "web-sec-aws-public-2",
              "Project": "web-sec-aws",
              "Type": "public"
            },
            "vpc_id": "vpc-028896094339f4624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:370598478840:vpc/vpc-028896094339f4624",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7ad33ec18384b2d",
            "default_route_table_id": "rtb-0fdaefe9977c8e204",
            "default_security_group_id": "sg-0fe5e624269d36927",
            "dhcp_options_id": "dopt-0b1f88433632b897d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-028896094339f4624",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fdaefe9977c8e204",
            "owner_id": "370598478840",
            "tags": {
              "Name": "web-sec-aws-vpc",
              "Project": "web-sec-aws"
            },
            "tags_all": {
              "Name": "web-sec-aws-vpc",
              "Project": "web-sec-aws"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}